test: add test_list target to Makefile for testing linked list implementation

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,3 +6,6 @@ CFLAGS = -I $(SSTL_DIR)
 
 test_vector: test_vector.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
+
+test_list: test_list.cpp $(SSTL_DIR)/*
+	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
