--- a/test/Makefile
+++ b/test/Makefile
@@ -9,3 +9,6 @@ test_vector: test_vector.cpp $(SSTL_DIR)/*
 
 test_list: test_list.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
+
+test_deque: test_deque.cpp $(SSTL_DIR)/*
+	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
