feat: add test_stack target to Makefile for testing stack implementation

--- a/test/Makefile
+++ b/test/Makefile
@@ -12,3 +12,6 @@ test_list: test_list.cpp $(SSTL_DIR)/*
 
 test_deque: test_deque.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
+
+test_stack:test_stack.cpp $(SSTL_DIR)/*
+	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
