--- a/test/Makefile
+++ b/test/Makefile
@@ -15,3 +15,6 @@ test_deque: test_deque.cpp $(SSTL_DIR)/*
 
 test_stack:test_stack.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
+
+test_queue: test_queue.cpp $(SSTL_DIR)/*
+	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
