feat: add test case for priority queue in Makefile tests

--- a/test/Makefile
+++ b/test/Makefile
@@ -21,3 +21,6 @@ test_queue: test_queue.cpp $(SSTL_DIR)/*
 
 test_heap: test_heap.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
+
+test_priority_queue: test_priority_queue.cpp $(SSTL_DIR)/*
+	$(CC) $(CFLAGS) -g $< -o $(BUILD_DIR)/$@
