feat: add test_slist target to Makefile for testing Slist functionality

--- a/test/Makefile
+++ b/test/Makefile
@@ -24,3 +24,6 @@ test_heap: test_heap.cpp $(SSTL_DIR)/*
 
 test_priority_queue: test_priority_queue.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) -g $< -o $(BUILD_DIR)/$@
+
+test_slist: test_slist.cpp $(SSTL_DIR)/*
+	$(CC) $(CFLAGS) -g $< -o $(BUILD_DIR)/$@
