refactor: refactor Makefile for test targets to use pattern rules

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,26 +4,10 @@ BUILD_DIR = $(ROOT_DIR)/build
 SSTL_DIR = $(ROOT_DIR)/Sstl
 CFLAGS = -I $(SSTL_DIR)
 
-test_vector: test_vector.cpp $(SSTL_DIR)/*
+.PHONY: default
+default:
+	@echo "file <test/Makefile> match no pattern"
+
+.PHONY: test_%
+test_%: test_%.cpp $(SSTL_DIR)/*
 	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
-
-test_list: test_list.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
-
-test_deque: test_deque.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
-
-test_stack: test_stack.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
-
-test_queue: test_queue.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
-
-test_heap: test_heap.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) $< -o $(BUILD_DIR)/$@
-
-test_priority_queue: test_priority_queue.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) -g $< -o $(BUILD_DIR)/$@
-
-test_slist: test_slist.cpp $(SSTL_DIR)/*
-	$(CC) $(CFLAGS) -g $< -o $(BUILD_DIR)/$@
